--- a/Pages/disaster/profile/inventory/Delete.cshtml
+++ b/Pages/disaster/profile/inventory/Delete.cshtml
@@ -30,11 +30,11 @@
 
                     if (rowsAffected > 0)
                     {
-                        successMessage = "Inventory item deleted successfully!";
+                        successMessage = "Item deleted successfully!";
                     }
                     else
                     {
-                        errorMessage = "Inventory item not found with the provided inventoryID.";
+                        errorMessage = "Item not found with the provided inventoryID.";
                     }
                 }
             }
