--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -264,7 +264,7 @@ else
                     <h3 class="dashtitle">@Model.dashboardInfo.totalDistinctBarangays</h3>
                     <p><b>Total Affected Brgys</b></p>
                     <div class="box-stat">
-                        <small>Families: <span>@Model.dashboardInfo.totalDistinctFamilies</span></small><br />
+                        <small>Families: <span>@Model.dashboardInfo.totalDistinctFamilies</span></small>
                         <small>Male: <span>@Model.dashboardInfo.totalDistinctFemale</span></small>
                         <small>Female: <span>@Model.dashboardInfo.totalDistinctMale</span></small>
                     </div>
@@ -306,6 +306,7 @@ else
                             <th>Barangay</th>
                             <th>Occupancy</th>
                             <th>Status</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -317,8 +318,8 @@ else
                             <tr>
                                 <td width="5%">@counter</td>
                                 <td width="25%" style="text-align: left;">@item.centerName</td>
-                                <td width="25%" style="text-align: center;">@item.barangayName</td>
-                                <td width="30%" style="text-align: center;">
+                                <td width="20%" style="text-align: center;">@item.barangayName</td>
+                                <td width="25%" style="text-align: center;">
                                     <div class="progress-container">
                                         <!-- Progress bar will be added dynamically here -->
                                     </div>
@@ -333,6 +334,13 @@ else
                                     {
                                         <span class="badge rounded-pill bg-light">@item.status</span>
                                     }
+                                </td>
+                                <td width="10%">
+                                    <div class="position-relative">
+                                        <a class="btn btn-primary edit-button" href="/disaster/profile/informationboard/index?centerLogID=@item.centerLogID">
+                                            <span>View</span>
+                                        </a>
+                                    </div>
                                 </td>
                             </tr>
                             counter++;
@@ -362,7 +370,7 @@ else
             pageLength: 25,
             columnDefs: [
                 { "orderable": true, "targets": [0, 1] }, //Sortable columns
-                { "orderable": false, "targets": [2, 3, 4] } // Non-sortable columns
+                { "orderable": false, "targets": [2, 3, 4, 5] } // Non-sortable columns
             ],
             initComplete: function () {
                 var rows = this.api().rows({ page: 'current' }).nodes();
