minor changes in typo

--- a/Pages/UserManagement/LGUStaff/Edit.cshtml
+++ b/Pages/UserManagement/LGUStaff/Edit.cshtml
@@ -34,7 +34,7 @@ else
         <form method="POST" id="editUserForm">
             <input type="hidden" name="userID" value="@Model.userID" />
             <h1 class="display-5 fw-bold">Edit User</h1>
-            <p class="form-label">EC Staff</p>
+            <p class="form-label">LGU Staff</p>
             <br />          
 
             <!-- First Name -->
