--- a/Pages/disaster/profile/inventory/Edit.cshtml
+++ b/Pages/disaster/profile/inventory/Edit.cshtml
@@ -61,7 +61,7 @@ else
 
 			<!-- Item Type -->
 			<div class="row mb-1">
-				<label class="col-sm-4 col-form-label text-start" for="itemType">Item Name:<span class="text-danger" style="padding:5px">*</span></label>
+				<label class="col-sm-4 col-form-label text-start" for="itemType">Item Type:<span class="text-danger" style="padding:5px">*</span></label>
 				<div class="col-sm-8">
 					<select class="form-select" name="itemType" required>
 						<option value="" selected disabled>Select Item Type</option>
